Fix answer for pivot table count

--- a/inclass_EDA_day2.ipynb
+++ b/inclass_EDA_day2.ipynb
@@ -5431,9 +5431,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>format</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">hypermarket</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">minimarket</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">supermarket</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sub_category</th>\n",
+       "      <th>Detergent</th>\n",
+       "      <th>Rice</th>\n",
+       "      <th>Sugar</th>\n",
+       "      <th>Detergent</th>\n",
+       "      <th>Rice</th>\n",
+       "      <th>Sugar</th>\n",
+       "      <th>Detergent</th>\n",
+       "      <th>Rice</th>\n",
+       "      <th>Sugar</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weekday</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>19138.560606</td>\n",
+       "      <td>66298.693694</td>\n",
+       "      <td>13358.891903</td>\n",
+       "      <td>17560.317294</td>\n",
+       "      <td>68546.853862</td>\n",
+       "      <td>12457.940470</td>\n",
+       "      <td>18133.631542</td>\n",
+       "      <td>73603.415629</td>\n",
+       "      <td>13024.603859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tuesday</th>\n",
+       "      <td>19389.388316</td>\n",
+       "      <td>74470.872340</td>\n",
+       "      <td>13794.590698</td>\n",
+       "      <td>17901.031532</td>\n",
+       "      <td>68448.321464</td>\n",
+       "      <td>12286.595116</td>\n",
+       "      <td>17944.182547</td>\n",
+       "      <td>73134.498062</td>\n",
+       "      <td>13436.082699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wednesday</th>\n",
+       "      <td>19372.105469</td>\n",
+       "      <td>68216.509804</td>\n",
+       "      <td>13234.430556</td>\n",
+       "      <td>17809.980058</td>\n",
+       "      <td>66220.127409</td>\n",
+       "      <td>12255.598561</td>\n",
+       "      <td>17797.291157</td>\n",
+       "      <td>71961.800562</td>\n",
+       "      <td>13234.805461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thursday</th>\n",
+       "      <td>19879.209774</td>\n",
+       "      <td>68319.880000</td>\n",
+       "      <td>13324.351220</td>\n",
+       "      <td>17987.282458</td>\n",
+       "      <td>67578.548780</td>\n",
+       "      <td>12511.782441</td>\n",
+       "      <td>17906.231623</td>\n",
+       "      <td>75706.441218</td>\n",
+       "      <td>12694.992999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Friday</th>\n",
+       "      <td>18891.041457</td>\n",
+       "      <td>73596.727273</td>\n",
+       "      <td>12885.248000</td>\n",
+       "      <td>17694.003432</td>\n",
+       "      <td>65973.959918</td>\n",
+       "      <td>12249.178311</td>\n",
+       "      <td>17535.585915</td>\n",
+       "      <td>77468.788054</td>\n",
+       "      <td>12982.341464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Saturday</th>\n",
+       "      <td>19970.335818</td>\n",
+       "      <td>72381.885714</td>\n",
+       "      <td>13939.891089</td>\n",
+       "      <td>17747.660396</td>\n",
+       "      <td>66611.120909</td>\n",
+       "      <td>12313.932787</td>\n",
+       "      <td>17773.888751</td>\n",
+       "      <td>74740.144531</td>\n",
+       "      <td>13001.971354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>18831.241756</td>\n",
+       "      <td>72182.653992</td>\n",
+       "      <td>13897.502674</td>\n",
+       "      <td>17649.690262</td>\n",
+       "      <td>66708.621488</td>\n",
+       "      <td>12385.304045</td>\n",
+       "      <td>17939.162317</td>\n",
+       "      <td>76545.073587</td>\n",
+       "      <td>13114.061792</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "format         hypermarket                                minimarket  \\\n",
+       "sub_category     Detergent          Rice         Sugar     Detergent   \n",
+       "weekday                                                                \n",
+       "Monday        19138.560606  66298.693694  13358.891903  17560.317294   \n",
+       "Tuesday       19389.388316  74470.872340  13794.590698  17901.031532   \n",
+       "Wednesday     19372.105469  68216.509804  13234.430556  17809.980058   \n",
+       "Thursday      19879.209774  68319.880000  13324.351220  17987.282458   \n",
+       "Friday        18891.041457  73596.727273  12885.248000  17694.003432   \n",
+       "Saturday      19970.335818  72381.885714  13939.891089  17747.660396   \n",
+       "Sunday        18831.241756  72182.653992  13897.502674  17649.690262   \n",
+       "\n",
+       "format                                     supermarket                \\\n",
+       "sub_category          Rice         Sugar     Detergent          Rice   \n",
+       "weekday                                                                \n",
+       "Monday        68546.853862  12457.940470  18133.631542  73603.415629   \n",
+       "Tuesday       68448.321464  12286.595116  17944.182547  73134.498062   \n",
+       "Wednesday     66220.127409  12255.598561  17797.291157  71961.800562   \n",
+       "Thursday      67578.548780  12511.782441  17906.231623  75706.441218   \n",
+       "Friday        65973.959918  12249.178311  17535.585915  77468.788054   \n",
+       "Saturday      66611.120909  12313.932787  17773.888751  74740.144531   \n",
+       "Sunday        66708.621488  12385.304045  17939.162317  76545.073587   \n",
+       "\n",
+       "format                      \n",
+       "sub_category         Sugar  \n",
+       "weekday                     \n",
+       "Monday        13024.603859  \n",
+       "Tuesday       13436.082699  \n",
+       "Wednesday     13234.805461  \n",
+       "Thursday      12694.992999  \n",
+       "Friday        12982.341464  \n",
+       "Saturday      13001.971354  \n",
+       "Sunday        13114.061792  "
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.crosstab(\n",
     "    index=household['weekday'], \n",
@@ -5454,9 +5637,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>format</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">hypermarket</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">minimarket</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">supermarket</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sub_category</th>\n",
+       "      <th>Detergent</th>\n",
+       "      <th>Rice</th>\n",
+       "      <th>Sugar</th>\n",
+       "      <th>Detergent</th>\n",
+       "      <th>Rice</th>\n",
+       "      <th>Sugar</th>\n",
+       "      <th>Detergent</th>\n",
+       "      <th>Rice</th>\n",
+       "      <th>Sugar</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weekday</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Monday</th>\n",
+       "      <td>19138.560606</td>\n",
+       "      <td>66298.693694</td>\n",
+       "      <td>13358.891903</td>\n",
+       "      <td>17560.317294</td>\n",
+       "      <td>68546.853862</td>\n",
+       "      <td>12457.940470</td>\n",
+       "      <td>18133.631542</td>\n",
+       "      <td>73603.415629</td>\n",
+       "      <td>13024.603859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tuesday</th>\n",
+       "      <td>19389.388316</td>\n",
+       "      <td>74470.872340</td>\n",
+       "      <td>13794.590698</td>\n",
+       "      <td>17901.031532</td>\n",
+       "      <td>68448.321464</td>\n",
+       "      <td>12286.595116</td>\n",
+       "      <td>17944.182547</td>\n",
+       "      <td>73134.498062</td>\n",
+       "      <td>13436.082699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wednesday</th>\n",
+       "      <td>19372.105469</td>\n",
+       "      <td>68216.509804</td>\n",
+       "      <td>13234.430556</td>\n",
+       "      <td>17809.980058</td>\n",
+       "      <td>66220.127409</td>\n",
+       "      <td>12255.598561</td>\n",
+       "      <td>17797.291157</td>\n",
+       "      <td>71961.800562</td>\n",
+       "      <td>13234.805461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thursday</th>\n",
+       "      <td>19879.209774</td>\n",
+       "      <td>68319.880000</td>\n",
+       "      <td>13324.351220</td>\n",
+       "      <td>17987.282458</td>\n",
+       "      <td>67578.548780</td>\n",
+       "      <td>12511.782441</td>\n",
+       "      <td>17906.231623</td>\n",
+       "      <td>75706.441218</td>\n",
+       "      <td>12694.992999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Friday</th>\n",
+       "      <td>18891.041457</td>\n",
+       "      <td>73596.727273</td>\n",
+       "      <td>12885.248000</td>\n",
+       "      <td>17694.003432</td>\n",
+       "      <td>65973.959918</td>\n",
+       "      <td>12249.178311</td>\n",
+       "      <td>17535.585915</td>\n",
+       "      <td>77468.788054</td>\n",
+       "      <td>12982.341464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Saturday</th>\n",
+       "      <td>19970.335818</td>\n",
+       "      <td>72381.885714</td>\n",
+       "      <td>13939.891089</td>\n",
+       "      <td>17747.660396</td>\n",
+       "      <td>66611.120909</td>\n",
+       "      <td>12313.932787</td>\n",
+       "      <td>17773.888751</td>\n",
+       "      <td>74740.144531</td>\n",
+       "      <td>13001.971354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sunday</th>\n",
+       "      <td>18831.241756</td>\n",
+       "      <td>72182.653992</td>\n",
+       "      <td>13897.502674</td>\n",
+       "      <td>17649.690262</td>\n",
+       "      <td>66708.621488</td>\n",
+       "      <td>12385.304045</td>\n",
+       "      <td>17939.162317</td>\n",
+       "      <td>76545.073587</td>\n",
+       "      <td>13114.061792</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "format         hypermarket                                minimarket  \\\n",
+       "sub_category     Detergent          Rice         Sugar     Detergent   \n",
+       "weekday                                                                \n",
+       "Monday        19138.560606  66298.693694  13358.891903  17560.317294   \n",
+       "Tuesday       19389.388316  74470.872340  13794.590698  17901.031532   \n",
+       "Wednesday     19372.105469  68216.509804  13234.430556  17809.980058   \n",
+       "Thursday      19879.209774  68319.880000  13324.351220  17987.282458   \n",
+       "Friday        18891.041457  73596.727273  12885.248000  17694.003432   \n",
+       "Saturday      19970.335818  72381.885714  13939.891089  17747.660396   \n",
+       "Sunday        18831.241756  72182.653992  13897.502674  17649.690262   \n",
+       "\n",
+       "format                                     supermarket                \\\n",
+       "sub_category          Rice         Sugar     Detergent          Rice   \n",
+       "weekday                                                                \n",
+       "Monday        68546.853862  12457.940470  18133.631542  73603.415629   \n",
+       "Tuesday       68448.321464  12286.595116  17944.182547  73134.498062   \n",
+       "Wednesday     66220.127409  12255.598561  17797.291157  71961.800562   \n",
+       "Thursday      67578.548780  12511.782441  17906.231623  75706.441218   \n",
+       "Friday        65973.959918  12249.178311  17535.585915  77468.788054   \n",
+       "Saturday      66611.120909  12313.932787  17773.888751  74740.144531   \n",
+       "Sunday        66708.621488  12385.304045  17939.162317  76545.073587   \n",
+       "\n",
+       "format                      \n",
+       "sub_category         Sugar  \n",
+       "weekday                     \n",
+       "Monday        13024.603859  \n",
+       "Tuesday       13436.082699  \n",
+       "Wednesday     13234.805461  \n",
+       "Thursday      12694.992999  \n",
+       "Friday        12982.341464  \n",
+       "Saturday      13001.971354  \n",
+       "Sunday        13114.061792  "
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.pivot_table(\n",
     "    data=household,\n",
@@ -5520,9 +5886,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>format</th>\n",
+       "      <th>hypermarket</th>\n",
+       "      <th>minimarket</th>\n",
+       "      <th>supermarket</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>category</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Fabric Care</th>\n",
+       "      <td>28412.196856</td>\n",
+       "      <td>23337.270487</td>\n",
+       "      <td>24738.854488</td>\n",
+       "      <td>24057.452666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rice</th>\n",
+       "      <td>102479.930931</td>\n",
+       "      <td>86508.830559</td>\n",
+       "      <td>94261.849478</td>\n",
+       "      <td>90366.554917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sugar/Flavored Syrup</th>\n",
+       "      <td>23785.120398</td>\n",
+       "      <td>20503.070398</td>\n",
+       "      <td>22550.114868</td>\n",
+       "      <td>21329.772002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>40671.624280</td>\n",
+       "      <td>31973.434032</td>\n",
+       "      <td>37702.085949</td>\n",
+       "      <td>34199.742820</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "format                  hypermarket    minimarket   supermarket         Total\n",
+       "category                                                                     \n",
+       "Fabric Care            28412.196856  23337.270487  24738.854488  24057.452666\n",
+       "Rice                  102479.930931  86508.830559  94261.849478  90366.554917\n",
+       "Sugar/Flavored Syrup   23785.120398  20503.070398  22550.114868  21329.772002\n",
+       "Total                  40671.624280  31973.434032  37702.085949  34199.742820"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.pivot_table(\n",
     "    data=household,\n",
