--- a/inclass_EDA_day2.ipynb
+++ b/inclass_EDA_day2.ipynb
@@ -5886,7 +5886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -5926,46 +5926,46 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Fabric Care</th>\n",
-       "      <td>28412.196856</td>\n",
-       "      <td>23337.270487</td>\n",
-       "      <td>24738.854488</td>\n",
-       "      <td>24057.452666</td>\n",
+       "      <td>2611</td>\n",
+       "      <td>24345</td>\n",
+       "      <td>9044</td>\n",
+       "      <td>36000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Rice</th>\n",
-       "      <td>102479.930931</td>\n",
-       "      <td>86508.830559</td>\n",
-       "      <td>94261.849478</td>\n",
-       "      <td>90366.554917</td>\n",
+       "      <td>999</td>\n",
+       "      <td>7088</td>\n",
+       "      <td>3913</td>\n",
+       "      <td>12000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sugar/Flavored Syrup</th>\n",
-       "      <td>23785.120398</td>\n",
-       "      <td>20503.070398</td>\n",
-       "      <td>22550.114868</td>\n",
-       "      <td>21329.772002</td>\n",
+       "      <td>1761</td>\n",
+       "      <td>15370</td>\n",
+       "      <td>6869</td>\n",
+       "      <td>24000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total</th>\n",
-       "      <td>40671.624280</td>\n",
-       "      <td>31973.434032</td>\n",
-       "      <td>37702.085949</td>\n",
-       "      <td>34199.742820</td>\n",
+       "      <td>5371</td>\n",
+       "      <td>46803</td>\n",
+       "      <td>19826</td>\n",
+       "      <td>72000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "format                  hypermarket    minimarket   supermarket         Total\n",
-       "category                                                                     \n",
-       "Fabric Care            28412.196856  23337.270487  24738.854488  24057.452666\n",
-       "Rice                  102479.930931  86508.830559  94261.849478  90366.554917\n",
-       "Sugar/Flavored Syrup   23785.120398  20503.070398  22550.114868  21329.772002\n",
-       "Total                  40671.624280  31973.434032  37702.085949  34199.742820"
+       "format                hypermarket  minimarket  supermarket  Total\n",
+       "category                                                         \n",
+       "Fabric Care                  2611       24345         9044  36000\n",
+       "Rice                          999        7088         3913  12000\n",
+       "Sugar/Flavored Syrup         1761       15370         6869  24000\n",
+       "Total                        5371       46803        19826  72000"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5976,6 +5976,7 @@
     "    index='category',\n",
     "    values='subtotal',\n",
     "    columns='format',\n",
+    "    aggfunc='count',\n",
     "    margins_name='Total',\n",
     "    margins=True\n",
     ")"
