--- a/inclass_EDA_day2.ipynb
+++ b/inclass_EDA_day2.ipynb
@@ -1760,152 +1760,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 136,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>receipt_id</th>\n",
-       "      <th>receipts_item_id</th>\n",
-       "      <th>purchase_time</th>\n",
-       "      <th>category</th>\n",
-       "      <th>sub_category</th>\n",
-       "      <th>format</th>\n",
-       "      <th>unit_price</th>\n",
-       "      <th>discount</th>\n",
-       "      <th>quantity</th>\n",
-       "      <th>yearmonth</th>\n",
-       "      <th>weekday</th>\n",
-       "      <th>yearmonth_recreate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>9622257</td>\n",
-       "      <td>32369294</td>\n",
-       "      <td>2018-07-22 21:19:00</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>supermarket</td>\n",
-       "      <td>128000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018-07</td>\n",
-       "      <td>Sunday</td>\n",
-       "      <td>2018-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>9446359</td>\n",
-       "      <td>31885876</td>\n",
-       "      <td>2018-07-15 16:17:00</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>minimarket</td>\n",
-       "      <td>102750.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018-07</td>\n",
-       "      <td>Sunday</td>\n",
-       "      <td>2018-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9470290</td>\n",
-       "      <td>31930241</td>\n",
-       "      <td>2018-07-15 12:12:00</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>supermarket</td>\n",
-       "      <td>64000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2018-07</td>\n",
-       "      <td>Sunday</td>\n",
-       "      <td>2018-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9643416</td>\n",
-       "      <td>32418582</td>\n",
-       "      <td>2018-07-24 08:27:00</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>minimarket</td>\n",
-       "      <td>65000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018-07</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>2018-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9692093</td>\n",
-       "      <td>32561236</td>\n",
-       "      <td>2018-07-26 11:28:00</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>supermarket</td>\n",
-       "      <td>124500.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018-07</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>2018-07</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   receipt_id  receipts_item_id       purchase_time category sub_category  \\\n",
-       "0     9622257          32369294 2018-07-22 21:19:00     Rice         Rice   \n",
-       "1     9446359          31885876 2018-07-15 16:17:00     Rice         Rice   \n",
-       "2     9470290          31930241 2018-07-15 12:12:00     Rice         Rice   \n",
-       "3     9643416          32418582 2018-07-24 08:27:00     Rice         Rice   \n",
-       "4     9692093          32561236 2018-07-26 11:28:00     Rice         Rice   \n",
-       "\n",
-       "        format  unit_price  discount  quantity yearmonth   weekday  \\\n",
-       "0  supermarket    128000.0         0         1   2018-07    Sunday   \n",
-       "1   minimarket    102750.0         0         1   2018-07    Sunday   \n",
-       "2  supermarket     64000.0         0         3   2018-07    Sunday   \n",
-       "3   minimarket     65000.0         0         1   2018-07   Tuesday   \n",
-       "4  supermarket    124500.0         0         1   2018-07  Thursday   \n",
-       "\n",
-       "  yearmonth_recreate  \n",
-       "0            2018-07  \n",
-       "1            2018-07  \n",
-       "2            2018-07  \n",
-       "3            2018-07  \n",
-       "4            2018-07  "
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 72000 entries, 0 to 71999\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column              Non-Null Count  Dtype         \n",
+      "---  ------              --------------  -----         \n",
+      " 0   receipt_id          72000 non-null  int64         \n",
+      " 1   receipts_item_id    72000 non-null  int64         \n",
+      " 2   purchase_time       72000 non-null  datetime64[ns]\n",
+      " 3   category            72000 non-null  object        \n",
+      " 4   sub_category        72000 non-null  object        \n",
+      " 5   format              72000 non-null  object        \n",
+      " 6   unit_price          72000 non-null  float64       \n",
+      " 7   discount            72000 non-null  int64         \n",
+      " 8   quantity            72000 non-null  int64         \n",
+      " 9   yearmonth           72000 non-null  object        \n",
+      " 10  weekday             72000 non-null  object        \n",
+      " 11  yearmonth_recreate  72000 non-null  period[M]     \n",
+      "dtypes: datetime64[ns](1), float64(1), int64(4), object(5), period[M](1)\n",
+      "memory usage: 6.6+ MB\n"
+     ]
     }
    ],
    "source": [
